03-gameoflife/apps/decisionmaker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"StatefulSet","name":"gol-cluster-kafka"}]'
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/pittar-sandbox/decisionmaker
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"decisionmaker:latest","namespace":"gameoflife"},"fieldPath":"spec.template.spec.containers[?(@.name==\"decisionmaker\")].image","pause":"false"}]'
  labels:
    app: decisionmaker
    app.kubernetes.io/component: decisionmaker
    app.kubernetes.io/instance: decisionmaker
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: gameoflife
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
  name: decisionmaker
  namespace: gameoflife
spec:
  progressDeadlineSeconds: 600
  replicas: 0
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: decisionmaker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: decisionmaker
        deploymentconfig: decisionmaker
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/gameoflife/decisionmaker:latest
        imagePullPolicy: Always
        name: decisionmaker
        ports:
        - containerPort: 8080
          protocol: TCP
        - containerPort: 8443
          protocol: TCP
        - containerPort: 8778
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
