03-gameoflife/apps/decisionmaker-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-ref: master
    app.openshift.io/vcs-uri: https://github.com/pittar-sandbox/decisionmaker
  labels:
    app: decisionmaker
    app.kubernetes.io/component: decisionmaker
    app.kubernetes.io/instance: decisionmaker
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: gameoflife
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-el7
  name: decisionmaker
  namespace: gameoflife
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: 8778-tcp
    port: 8778
    protocol: TCP
    targetPort: 8778
  selector:
    app: decisionmaker
    deploymentconfig: decisionmaker
  sessionAffinity: None
  type: ClusterIP
